--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,6 +1,7 @@
 {
   "userid": "201805139999",
   "passwd": "abc123",
+  "deviceId": "a3297db6e98622d94d4252eadaa32f0c",
   "area": "威海馆-主楼(3-10)",
   "seats": {
     "三楼阅览室": ["001", "011"],
